--- a/package.json
+++ b/package.json
@@ -45,8 +45,14 @@
     "use-debounce": "^10.0.4"
   },
   "devDependencies": {
-    "@types/react": "19.1.8",
-    "typescript": "5.8.3"
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "eslint": "^9",
+    "eslint-config-next": "15.2.0",
+    "tw-animate-css": "^1.3.4",
+    "typescript": "^5"
   },
   "pnpm": {
     "overrides": {
